# astroskills_final

./: .gitignore  README.md  main.py  pyproject.toml  requirements.in
data/: TableA_full_machine_readable_params.csv  ZTF_alerce_alerts.csv  ZTF_coords.csv  zenodo_metasample.csv  zenodo_metasample_with_MW.csv
notebooks/: model_assessment.ipynb  project.ipynb
src/tailwise/: __init__.py  hbm.py  misc.py  plotting.py  sed.py  wise.py  ztf.py
